[gd_scene load_steps=17 format=4 uid="uid://cffx4v55v1p1j"]

[ext_resource type="Script" path="res://game/levels/level_tooler.gd" id="1_7pcrp"]
[ext_resource type="PackedScene" uid="uid://l6euokb2as41" path="res://game/decoration/background_decoration.tscn" id="2_llv43"]
[ext_resource type="PackedScene" uid="uid://cr1v0ms0iny16" path="res://game/terrain/foreground_tiles.tscn" id="3_nknqh"]
[ext_resource type="PackedScene" uid="uid://b6hmel6ovixuw" path="res://game/levels/level_005.tscn" id="6_adfl0"]
[ext_resource type="PackedScene" uid="uid://cyxqktr555eq4" path="res://game/decoration/level_name.tscn" id="6_sc7ro"]
[ext_resource type="PackedScene" uid="uid://4866d3bmidtx" path="res://game/powerups/power_up_next_level.tscn" id="8_vuncl"]
[ext_resource type="PackedScene" uid="uid://bnln3d06qe2ld" path="res://game/decoration/level_dark_light.tscn" id="10_2u60e"]
[ext_resource type="Script" path="res://game/player/spawner.gd" id="11_fnswe"]
[ext_resource type="PackedScene" uid="uid://bal7ofwbeschm" path="res://game/player/character.tscn" id="12_3eumo"]
[ext_resource type="Script" path="res://game/camera/follow.gd" id="13_krhox"]
[ext_resource type="Script" path="res://addons/zaft_game_manager/state/in/game.gd" id="14_1k0in"]
[ext_resource type="Script" path="res://addons/zaft_game_manager/pause/unpauses.gd" id="15_m6lih"]
[ext_resource type="Script" path="res://addons/zaft_game_manager/layers/at/hud.gd" id="16_1mrjx"]
[ext_resource type="PackedScene" uid="uid://b406q8kxdufx0" path="res://game/hud/current_time.tscn" id="16_efkv2"]
[ext_resource type="PackedScene" uid="uid://owhqpn13v0yi" path="res://game/hud/buttons.tscn" id="17_0t7mt"]
[ext_resource type="PackedScene" uid="uid://cpcygowuihqdk" path="res://game/terrain/vent.tscn" id="18_2nbrm"]

[node name="Level004" type="Node2D"]

[node name="LevelTooler" type="Node" parent="."]
script = ExtResource("1_7pcrp")

[node name="Background" parent="." instance=ExtResource("2_llv43")]
metadata/created_via_tool_script = true

[node name="Foreground" parent="." instance=ExtResource("3_nknqh")]
tile_map_data = PackedByteArray("AAD4/wQAAAAGAAIAAAD4/wMAAAADAAEAAAD4/wIAAAADAAEAAAD4/wEAAAADAAEAAAD4/wAAAAADAAEAAAD4////AAADAAEAAAD4//7/AAADAAEAAAD4//3/AAADAAEAAAD4//z/AAADAAEAAAD4//v/AAADAAEAAAD4//r/AAADAAAAAAD3/wQAAAACAAEAAAD3/wMAAAALAAAAAAD3/wIAAAALAAAAAAD3/wEAAAACAAEAAAD3/wAAAAALAAAAAAD3////AAALAAAAAAD3//7/AAALAAAAAAD3//3/AAALAAAAAAD3//z/AAALAAAAAAD3//v/AAACAAEAAAD3//r/AAACAAAAAAD2/wQAAAALAAAAAAD2/wMAAAACAAEAAAD2/wIAAAALAAAAAAD2/wEAAAALAAAAAAD2/wAAAAALAAAAAAD2////AAALAAAAAAD2//7/AAALAAAAAAD2//3/AAALAAAAAAD2//z/AAALAAAAAAD2//v/AAALAAAAAAD2//r/AAAGAAIAAAD1/wQAAAALAAAAAAD1/wMAAAALAAAAAAD1/wIAAAACAAEAAAD1/wEAAAALAAAAAAD1/wAAAAACAAEAAAD1////AAACAAEAAAD1//7/AAALAAAAAAD1//3/AAALAAAAAAD1//z/AAACAAEAAAD1//v/AAACAAEAAAD1//r/AAACAAEAAAAKAAcAAAACAAIAAAAKAAYAAAACAAEAAAAKAAUAAAALAAAAAAAKAAQAAAACAAAAAAAJAAcAAAACAAIAAAAJAAYAAAACAAEAAAAJAAUAAAACAAEAAAAJAAQAAAACAAAAAAAIAAcAAAACAAIAAAAIAAYAAAALAAAAAAAIAAUAAAALAAAAAAAIAAQAAAACAAAAAAAHAAcAAAACAAIAAAAHAAYAAAALAAAAAAAHAAUAAAACAAEAAAAHAAQAAAACAAAAAAAGAAcAAAACAAIAAAAGAAYAAAACAAEAAAAGAAUAAAALAAAAAAAGAAQAAAACAAAAAAAFAAcAAAACAAIAAAAFAAYAAAACAAEAAAAFAAUAAAACAAEAAAAFAAQAAAACAAAAAAAEAAcAAAACAAIAAAAEAAYAAAALAAAAAAAEAAUAAAALAAAAAAAEAAQAAAACAAAAAAADAAcAAAACAAIAAAADAAYAAAALAAAAAAADAAUAAAACAAEAAAADAAQAAAACAAAAAAACAAcAAAACAAIAAAACAAYAAAACAAEAAAACAAUAAAALAAAAAAACAAQAAAACAAAAAAABAAcAAAACAAIAAAABAAYAAAACAAEAAAABAAUAAAALAAAAAAABAAQAAAACAAAAAAAAAAcAAAACAAIAAAAAAAYAAAALAAAAAAAAAAUAAAALAAAAAAAAAAQAAAACAAAAAAD//wcAAAACAAIAAAD//wYAAAALAAAAAAD//wUAAAALAAAAAAD//wQAAAACAAAAAAD+/wcAAAACAAIAAAD+/wYAAAACAAEAAAD+/wUAAAACAAEAAAD+/wQAAAACAAAAAAD9/wcAAAACAAIAAAD9/wYAAAACAAEAAAD9/wUAAAACAAEAAAD9/wQAAAACAAAAAAD8/wcAAAACAAIAAAD8/wYAAAALAAAAAAD8/wUAAAALAAAAAAD8/wQAAAACAAAAAAD7/wcAAAACAAIAAAD7/wYAAAACAAEAAAD7/wUAAAACAAEAAAD7/wQAAAACAAAAAAD6/wcAAAACAAIAAAD6/wYAAAALAAAAAAD6/wUAAAALAAAAAAD6/wQAAAACAAAAAAD5/wcAAAACAAIAAAD5/wYAAAALAAAAAAD5/wUAAAALAAAAAAD5/wQAAAACAAAAAAD4/wcAAAACAAIAAAD4/wYAAAALAAAAAAD4/wUAAAACAAEAAAD3/wcAAAACAAIAAAD3/wYAAAALAAAAAAD3/wUAAAALAAAAAAD2/wcAAAACAAIAAAD2/wYAAAALAAAAAAD2/wUAAAALAAAAAAD1/wcAAAACAAIAAAD1/wYAAAALAAAAAAD1/wUAAAALAAAAAAAMAAcAAAACAAIAAAAMAAYAAAACAAEAAAAMAAUAAAALAAAAAAAMAAQAAAACAAAAAAALAAcAAAACAAIAAAALAAYAAAALAAAAAAALAAUAAAACAAEAAAALAAQAAAACAAAAAAAQAAcAAAADAAIAAAAQAAYAAAADAAEAAAAQAAUAAAADAAEAAAAQAAQAAAADAAEAAAAQAAMAAAADAAEAAAAQAAIAAAADAAEAAAAQAAEAAAADAAEAAAAQAAAAAAADAAEAAAAQAP//AAADAAEAAAAQAP7/AAADAAEAAAAQAP3/AAADAAEAAAAQAPz/AAADAAEAAAAQAPv/AAADAAEAAAAQAPr/AAADAAEAAAAQAPn/AAADAAEAAAAQAPj/AAADAAEAAAAPAAcAAAACAAIAAAAPAAYAAAALAAAAAAAPAAUAAAALAAAAAAAPAAQAAAALAAAAAAAPAAMAAAACAAEAAAAPAAIAAAACAAEAAAAPAAEAAAACAAEAAAAPAAAAAAALAAAAAAAPAP//AAACAAEAAAAPAP7/AAACAAEAAAAPAP3/AAALAAAAAAAPAPz/AAACAAEAAAAPAPv/AAALAAAAAAAPAPr/AAACAAEAAAAPAPn/AAACAAEAAAAPAPj/AAALAAAAAAAOAAcAAAACAAIAAAAOAAYAAAACAAEAAAAOAAUAAAACAAEAAAAOAAQAAAACAAEAAAAOAAMAAAALAAAAAAAOAAIAAAACAAEAAAAOAAEAAAACAAEAAAAOAAAAAAACAAEAAAAOAP//AAACAAEAAAAOAP7/AAACAAEAAAAOAP3/AAACAAEAAAAOAPz/AAALAAAAAAAOAPv/AAALAAAAAAAOAPr/AAACAAEAAAAOAPn/AAACAAEAAAAOAPj/AAALAAAAAAANAAcAAAACAAIAAAANAAYAAAACAAEAAAANAAUAAAALAAAAAAANAAQAAAAHAAIAAAANAAMAAAABAAEAAAANAAIAAAABAAEAAAANAAEAAAABAAEAAAANAAAAAAABAAEAAAANAP//AAABAAEAAAANAP7/AAABAAEAAAANAP3/AAABAAEAAAANAPz/AAABAAEAAAANAPv/AAABAAEAAAANAPr/AAABAAEAAAANAPn/AAABAAEAAAANAPj/AAABAAEAAAAGAP3/AAADAAAAAAAFAP3/AAACAAAAAAAEAP3/AAACAAAAAAADAP3/AAABAAAAAAD+//3/AAACAAIAAAD+//z/AAALAAAAAAD+//v/AAACAAAAAAD9//3/AAACAAIAAAD9//z/AAACAAEAAAD9//v/AAACAAAAAAD8//3/AAABAAIAAAD8//z/AAABAAEAAAD8//v/AAABAAAAAAD///3/AAADAAIAAAD///z/AAADAAEAAAD///v/AAADAAAAAAD2//n/AAADAAEAAAD2//j/AAADAAEAAAD2//f/AAADAAEAAAD2//b/AAADAAEAAAD2//X/AAADAAEAAAD2//T/AAADAAEAAAD1//n/AAALAAAAAAD1//j/AAALAAAAAAD1//f/AAALAAAAAAD1//b/AAALAAAAAAD1//X/AAACAAEAAAD1//T/AAALAAAAAAD0//z/AAACAAEAAAD0//v/AAACAAEAAAD0//r/AAACAAEAAAD0//n/AAALAAAAAAD0//j/AAALAAAAAAD0//f/AAACAAEAAAD0//b/AAALAAAAAAD0//X/AAACAAEAAAD0//T/AAALAAAAAAD0/wUAAAALAAAAAAD0/wQAAAALAAAAAAD0/wMAAAALAAAAAAD0/wIAAAALAAAAAAD0/wEAAAALAAAAAAD0/wAAAAALAAAAAAD0////AAALAAAAAAD0//7/AAALAAAAAAD0//3/AAALAAAAAADz/wUAAAABAAEAAADz/wQAAAABAAEAAADz/wMAAAABAAEAAADz/wIAAAABAAEAAADz/wEAAAABAAEAAADz/wAAAAABAAEAAADz////AAABAAEAAADz//7/AAABAAEAAADz//3/AAABAAEAAADz//z/AAABAAEAAADz//v/AAABAAEAAADz//r/AAABAAEAAADz//n/AAABAAEAAADz//j/AAABAAEAAADz//f/AAABAAEAAADz//b/AAABAAEAAADz//X/AAABAAEAAADz//T/AAABAAEAAAD0/wcAAAACAAIAAAD0/wYAAAALAAAAAADz/wcAAAABAAIAAADz/wYAAAABAAEAAAAQAPf/AAADAAEAAAAQAPb/AAADAAEAAAAQAPX/AAADAAEAAAAQAPT/AAADAAEAAAAQAPP/AAADAAAAAAAPAPf/AAALAAAAAAAPAPb/AAACAAEAAAAPAPX/AAALAAAAAAAPAPT/AAACAAEAAAAPAPP/AAACAAAAAAAOAPf/AAALAAAAAAAOAPb/AAACAAEAAAAOAPX/AAALAAAAAAAOAPT/AAACAAEAAAAOAPP/AAACAAAAAAANAPf/AAABAAEAAAANAPb/AAABAAEAAAANAPX/AAABAAEAAAANAPT/AAABAAEAAAANAPP/AAABAAAAAAAGAP7/AAADAAIAAAAFAP7/AAACAAIAAAAEAP7/AAACAAIAAAADAP7/AAABAAIAAAD2//P/AAADAAEAAAD2//L/AAADAAEAAAD2//H/AAADAAAAAAD1//P/AAACAAEAAAD1//L/AAACAAEAAAD1//H/AAACAAAAAAD0//P/AAACAAEAAAD0//L/AAALAAAAAAD0//H/AAACAAAAAADz//P/AAABAAEAAADz//L/AAABAAEAAADz//H/AAABAAAAAAA=")
metadata/created_via_tool_script = true

[node name="LevelName" parent="." instance=ExtResource("6_sc7ro")]
offset_left = -68.0
offset_top = 80.0
offset_right = 128.0
offset_bottom = 96.0
text = "Level 04: It's ad-vent-ure time"
metadata/created_via_tool_script = true

[node name="NextLevel" parent="." instance=ExtResource("8_vuncl")]
position = Vector2(-136, -116)
scene = ExtResource("6_adfl0")
metadata/created_via_tool_script = true

[node name="DarkLight" parent="." instance=ExtResource("10_2u60e")]
metadata/created_via_tool_script = true

[node name="PlayerSpawner" type="Area2D" parent="."]
script = ExtResource("11_fnswe")
active = true
scene = ExtResource("12_3eumo")
metadata/created_via_tool_script = true

[node name="Camera" type="Camera2D" parent="."]
zoom = Vector2(4, 4)
process_callback = 0
script = ExtResource("13_krhox")
metadata/created_via_tool_script = true

[node name="StateGame" type="Node" parent="."]
script = ExtResource("14_1k0in")
metadata/created_via_tool_script = true

[node name="Unpauses" type="Node" parent="."]
script = ExtResource("15_m6lih")
metadata/created_via_tool_script = true

[node name="ButtonsHUD" type="Node" parent="."]
script = ExtResource("16_1mrjx")
scene = ExtResource("17_0t7mt")
metadata/created_via_tool_script = true

[node name="Vent" parent="." instance=ExtResource("18_2nbrm")]
position = Vector2(160, 72)

[node name="Time" type="Node" parent="."]
script = ExtResource("16_1mrjx")
scene = ExtResource("16_efkv2")
